# unit-convert

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  config.h.in  convert.pro  convert.ts  convert_de.qm  data.rcc  object_script.convert.Release  settings.ini  tmp.xml  units.xml
doc/: windows.md
inc/: about.hpp  ccore.hpp  help.hpp  main.hpp  menufactory.hpp  parser.hpp  settings.hpp  unit.hpp
installer/: convert.nsi  license.txt  mksetup.bat  qt5rt.nsi
installer/config/: config.in.txt  config.xml
pkg/: PKGBUILD
res/: convert.rc  enter-math.xcf  help.html  info.xml  main.qrc  mainwindow.qrc  menu.xml  setup.xml  split.xcf  sxwconvert-howto.odt  teaser.html  toolbar.xcf  units.xml  validator-setup.xml  wdysr.xcf
res/i18n/: convert.de_DE.qm
src/: about.cpp  about.hpp  app.cpp  ccore.cpp  ccore.hpp  convert.cpp  convert.hpp  help.cpp  licensekey.cpp  licensekey.hpp  main.cpp  main.hpp  menufactory.cpp  menufactory.hpp  parser.cpp  parser.hpp  settings.cpp  settings.hpp  unit.cpp  unit.hpp
t/: t.pro  testsuite.cpp
tmp/: ec.private.key  ec.public.key  signer.cpp  verify.cpp
tmp/guconv/: .gitignore  Makefile
tmp/guconv/inc/: arithmetic.h  mainwindow.h  xmlparser.h
tmp/guconv/res/: units.xml
tmp/guconv/src/: arithmetic.c  main.c  mainwindow.c  xmlparser.c
ui/: about.ui  aboutbox_convert.ui  mainwindow.ui  mainwindow_convert.ui
